added ability to search for player and season and stats are displayed in console

--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
         <script src="index.js" defer></script>
     </head>
     <body>
-        
+        <div class="container">
+            <form action="">
+                <div>
+                    <label for="player-name-1">Player Name</label>
+                    <input type="text" id="player-name-1" name="player-name-1" placeholder="Enter player name">
+                </div>
+                <div>
+                    <label for="season-1">Seson</label>
+                    <input type="text" id="season-1" name="season-1" placeholder="Enter season">
+                </div>
+                <button id="submit-1">Get Stats</button>
+            </form>
+            <form action="">
+                <div>
+                    <label for="player-name-2">Player Name</label>
+                    <input type="text" id="player-name-2" name="player-name-2" placeholder="Enter player name">
+                </div>
+                <div>
+                    <label for="season-2">Season</label>
+                    <input type="text" id="season-2" name="season-2" placeholder="Enter season">
+                </div>
+                <button id="submit-2">Get Stats</button>
+            </form>
+        </div>
     </body>
 </html>
