--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     </head>
     <body>
         <div class="header">
-            <i class="fa-solid fa-basketball rotate"></i>
-            <h1>NBA Duel</h1>
+            <div class="logo">
+                <i class="fa-solid fa-basketball rotate"></i>
+                <h1>NBA Duel</h1>
+            </div>
+            <p>Need to win an NBA player argument in a hurry? You've come to the perfect place!</p>
         </div>
         <div class="content-container">
             <div class="content">
@@ -21,21 +24,21 @@
                     <form action="">
                         <div>
                             <label for="player-name-1">Player Name</label>
-                            <input type="text" id="player-name-1" name="player-name-1" placeholder="Enter player name" value="lebron james">
+                            <input type="text" id="player-name-1" name="player-name-1" placeholder="Enter player name" value="lebron james" required>
                         </div>
                         <div>
                             <label for="season-1">Season</label>
-                            <input type="text" id="season-1" name="season-1" placeholder="Enter NBA season" value="2021">
+                            <input type="text" id="season-1" name="season-1" placeholder="Enter NBA season" value="2021" min="1979" required>
                         </div>
                     </form>
                     <form action="">
                         <div>
                             <label for="player-name-2">Player Name</label>
-                            <input type="text" id="player-name-2" name="player-name-2" placeholder="Enter player name" value="luka doncic">
+                            <input type="text" id="player-name-2" name="player-name-2" placeholder="Enter player name" value="luka doncic" required>
                         </div>
                         <div>
                             <label for="season-2">Season</label>
-                            <input type="text" id="season-2" name="season-2" placeholder="Enter NBA season" value="2021">
+                            <input type="text" id="season-2" name="season-2" placeholder="Enter NBA season" value="2021" min="1979" required>
                         </div>
                     </form>
                 </div>
