added season select feature, added error handling for invalid players/seasons

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         </div>
                         <div>
                             <label for="season-1">Season</label>
-                            <input type="text" id="season-1" name="season-1" placeholder="Enter NBA season" value="2021" min="1979" required>
+                            <select id="season-1" name="season-1" required></select>
                         </div>
                     </form>
                     <form action="">
@@ -38,7 +38,7 @@
                         </div>
                         <div>
                             <label for="season-2">Season</label>
-                            <input type="text" id="season-2" name="season-2" placeholder="Enter NBA season" value="2021" min="1979" required>
+                            <select id="season-2" name="season-2" required></select>
                         </div>
                     </form>
                 </div>
