added return home feature

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <form action="">
                         <div>
                             <label for="player-name-1">Player Name</label>
-                            <input type="text" id="player-name-1" name="player-name-1" placeholder="Enter player name" value="lebron james" required>
+                            <input type="text" id="player-name-1" name="player-name-1" placeholder="Enter player name" required>
                         </div>
                         <div>
                             <label for="season-1">Season</label>
@@ -34,7 +34,7 @@
                     <form action="">
                         <div>
                             <label for="player-name-2">Player Name</label>
-                            <input type="text" id="player-name-2" name="player-name-2" placeholder="Enter player name" value="luka doncic" required>
+                            <input type="text" id="player-name-2" name="player-name-2" placeholder="Enter player name" required>
                         </div>
                         <div>
                             <label for="season-2">Season</label>
